--- a/_config.yml
+++ b/_config.yml
@@ -277,7 +277,7 @@ jekyll-archives:
     category: "/blog/category/:name/"
 
 display_tags:  # ["formatting", "images", "links", "math", "code"] # these tags will be displayed on the front page of your blog
-display_categories: ["네트워크", "운영체제", "데이터베이스", "알고리즘"] # ["blockquotes"] # these categories will be displayed on the front page of your blog
+display_categories: ["백엔드", "알고리즘"] # ["blockquotes"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
